--- a/client/src/App.css
+++ b/client/src/App.css
@@ -114,6 +114,7 @@ body {
   background-color: #007bff;
   color: white;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .pagination .page-link:hover {
